// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`util > itinerary routeComparator should prioritize routes with integer shortNames over alphabetic shortNames 1`] = `
Array [
  Object {
    "longName": "A-line",
    "mode": "BUS",
    "shortName": "A",
    "sortOrder": -999,
  },
  Object {
    "longName": "Loop route",
    "mode": "BUS",
    "shortName": "2",
    "sortOrder": -999,
  },
]
`;

exports[`util > itinerary routeComparator should prioritize routes with shortNames over those with just longNames 1`] = `
Array [
  Object {
    "longName": "B-line",
    "mode": "BUS",
    "shortName": "B",
    "sortOrder": -999,
  },
  Object {
    "longName": "A meandering route",
    "mode": "BUS",
    "sortOrder": -999,
  },
]
`;

exports[`util > itinerary routeComparator should prioritize routes with valid sortOrder 1`] = `
Array [
  Object {
    "longName": "Around town",
    "mode": "BUS",
    "shortName": "20",
    "sortOrder": 2,
  },
  Object {
    "longName": "Around another town",
    "shortName": "3",
    "sortOrder": -999,
    "type": 3,
  },
]
`;

exports[`util > itinerary routeComparator should sort based off of route type 1`] = `
Array [
  Object {
    "longName": "Yellow line Subway",
    "mode": "SUBWAY",
    "shortName": "Yellow",
    "sortOrder": 2,
  },
  Object {
    "longName": "Intercity Train",
    "mode": "RAIL",
    "shortName": "IC",
    "sortOrder": 2,
  },
]
`;

exports[`util > itinerary routeComparator should sort routes based off of integer shortName 1`] = `
Array [
  Object {
    "longName": "Loop route",
    "mode": "BUS",
    "shortName": "2",
    "sortOrder": -999,
  },
  Object {
    "longName": "Around another town",
    "shortName": "3",
    "sortOrder": -999,
    "type": 3,
  },
]
`;

exports[`util > itinerary routeComparator should sort routes based off of longNames 1`] = `
Array [
  Object {
    "longName": "Express route",
    "mode": "BUS",
    "shortName": "30",
    "sortOrder": 2,
  },
  Object {
    "longName": "Variation of express route",
    "mode": "BUS",
    "shortName": "30",
    "sortOrder": 2,
  },
]
`;

exports[`util > itinerary routeComparator should sort routes based off of shortNames 1`] = `
Array [
  Object {
    "longName": "A-line",
    "mode": "BUS",
    "shortName": "A",
    "sortOrder": -999,
  },
  Object {
    "longName": "B-line",
    "mode": "BUS",
    "shortName": "B",
    "sortOrder": -999,
  },
]
`;

exports[`util > itinerary routeComparator should sort routes based off of sortOrder 1`] = `
Array [
  Object {
    "longName": "Around town",
    "mode": "BUS",
    "shortName": "20",
    "sortOrder": 2,
  },
  Object {
    "longName": "Across town",
    "mode": "BUS",
    "shortName": "10",
    "sortOrder": 10,
  },
]
`;

exports[`util > itinerary routeComparator should sort routes on all of the criteria at once 1`] = `
Array [
  Object {
    "longName": "Yellow line Subway",
    "mode": "SUBWAY",
    "shortName": "Yellow",
    "sortOrder": 2,
  },
  Object {
    "longName": "Intercity Train",
    "mode": "RAIL",
    "shortName": "IC",
    "sortOrder": 2,
  },
  Object {
    "longName": "Local route",
    "mode": "BUS",
    "shortName": "6",
    "sortOrder": 2,
  },
  Object {
    "longName": "Around town",
    "mode": "BUS",
    "shortName": "20",
    "sortOrder": 2,
  },
  Object {
    "longName": "Express route",
    "mode": "BUS",
    "shortName": "30",
    "sortOrder": 2,
  },
  Object {
    "longName": "Variation of express route",
    "mode": "BUS",
    "shortName": "30",
    "sortOrder": 2,
  },
  Object {
    "longName": "Zig-zagging route",
    "mode": "BUS",
    "shortName": "30",
    "sortOrder": 2,
  },
  Object {
    "longName": "Xpress route C",
    "mode": "BUS",
    "shortName": "30C",
    "sortOrder": 2,
  },
  Object {
    "longName": "Express route X",
    "mode": "BUS",
    "shortName": "30X",
    "sortOrder": 2,
  },
  Object {
    "longName": "Across town",
    "mode": "BUS",
    "shortName": "10",
    "sortOrder": 10,
  },
  Object {
    "longName": "A-line",
    "mode": "BUS",
    "shortName": "A",
    "sortOrder": -999,
  },
  Object {
    "longName": "B-line",
    "mode": "BUS",
    "shortName": "B",
    "sortOrder": -999,
  },
  Object {
    "longName": "Loop route",
    "mode": "BUS",
    "shortName": "2",
    "sortOrder": -999,
  },
  Object {
    "longName": "Around another town",
    "shortName": "3",
    "sortOrder": -999,
    "type": 3,
  },
  Object {
    "longName": "A meandering route",
    "mode": "BUS",
    "sortOrder": -999,
  },
]
`;

exports[`util > itinerary routeComparator should sort routes with alphanumeric shortNames 1`] = `
Array [
  Object {
    "longName": "Xpress route C",
    "mode": "BUS",
    "shortName": "30C",
    "sortOrder": 2,
  },
  Object {
    "longName": "Express route X",
    "mode": "BUS",
    "shortName": "30X",
    "sortOrder": 2,
  },
]
`;
